crates/keron-lang/tests/corpus/errors/check/match_missing_wildcard_string.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: non-exhaustive `match` on `String`: a wildcard arm `_` is required
  --> 2:9
  |
2 |   match s {
  |         ^
